--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -21,6 +21,12 @@ columnSupplier=Supplier
 columnStatus=Status
 columnPrice=Price
 
+#Overview Page
+Overview_rootLabel=Overview Page
+Overview_headerLabel=Header
+Overview_contentLabel=Page Content
+ratingTitle=Rate the Product
+
 # Detail Page
 detailPageTitle=SAPUI5 Walkthrough - Details
 ratingConfirmation=You have rated this product with {0} stars
